tests/option_compile_failed/when_some_message_should_fail_to_compile.rs
use macrofied_toolbox::option;

fn main() {
    let value = option! {
        @some "This will fail: {}", 42
        @none return
    };

    assert_eq!(42, value);
}